--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <nav style="text-align: center; margin: 20px 0;">
         <a href="pages/estudiantes.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Estudiantes</a>
-        <a href="pages/cursos.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Cursos</a>
+        <a href="/Users/Javier_1/Personal/UCentral/Programación Internet/Proyecto Principal/pages/cursos.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Cursos</a>
         <a href="pages/profesores.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Profesores</a>
     </nav>
     <main>
