--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Sistema de la Universidad Central</h1>
     </header>
     <nav style="text-align: center; margin: 20px 0;">
-        <a href="/pages/estudiantes.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Estudiantes</a>
-        <a href="Proyecto Principal/pages/cursos.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Cursos</a>
-        <a href="/pages/profesores.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Profesores</a>
+        <a href="pages/estudiantes.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Estudiantes</a>
+        <a href="pages/cursos.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Cursos</a>
+        <a href="pages/profesores.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Profesores</a>
     </nav>
     <main>
         <section style="max-width: 400px; margin: 0 auto; background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
