--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -10,7 +10,7 @@
         <h1>Módulo de Cursos</h1>
     </header>
     <nav style="text-align: center; margin: 20px 0;">
-        <a href="index.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Volver al Login</a>
+        <a href="Proyecto-avance/index.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Volver al Login</a>
         <a href="estudiantes.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Estudiantes</a>
         <a href="profesores.html" style="margin: 0 10px; text-decoration: none; color: #007bff; font-weight: bold;">Profesores</a>
     </nav>
