--- a/pages/estudiantes.html
+++ b/pages/estudiantes.html
@@ -1,53 +1,73 @@
-  <!DOCTYPE html>
-  <html lang="es">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Estudiantes</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="../css/estilos.css">
-  </head>
-  <body class="bg-light">
-      <header class="bg-primary text-white text-center py-3">
-          <h1>Módulo de Estudiantes</h1>
-      </header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-          <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
-              <li class="nav-item"><a class="nav-link" href="profesores.html">Profesores</a></li>
-              <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
-          </ul>
-      </nav>
-      <main class="container mt-4">
-          <section class="bg-white p-4 rounded shadow">
-              <h2>Lista de Estudiantes</h2>
-              <form action="#" method="get" class="mb-3">
-                  <label for="busqueda" class="form-label">Buscar por nombre:</label>
-                  <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre">
-                  <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
-              </form>
-              <table class="table table-striped">
-                  <thead class="table-primary">
-                      <tr>
-                          <th>ID</th>
-                          <th>Nombre</th>
-                          <th>Correo</th>
-                          <th>Edad</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr><td>1</td><td>Juan Quirós</td><td>juan@gmail.com</td><td>24</td></tr>
-                      <tr><td>2</td><td>Diego Solano</td><td>diego@gmail.com</td><td>21</td></tr>
-                      <tr><td>3</td><td>Johanna Moraga</td><td>johanna@gmail.com</td><td>23</td></tr>
-                  </tbody>
-              </table>
-          </section>
-      </main>
-      <footer class="text-center mt-4 text-muted">
-          <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-  </html>
-  
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estudiantes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilos.css">
+</head>
+<body class="bg-light" onload="cargarTabla('estudiantes')">
+    <header class="bg-primary text-white text-center py-3">
+        <h1>Módulo de Estudiantes</h1>
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
+            <li class="nav-item"><a class="nav-link" href="profesores.html">Profesores</a></li>
+            <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
+        </ul>
+    </nav>
+    <main class="container mt-4">
+        <section class="bg-white p-4 rounded shadow mb-4">
+            <h2>Agregar Estudiante</h2>
+            <form id="form-estudiantes" class="d-flex flex-column">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required minlength="3" class="form-control mb-3">
+                <label for="correo" class="form-label">Correo:</label>
+                <input type="email" id="correo" name="correo" required class="form-control mb-3">
+                <label for="edad" class="form-label">Edad:</label>
+                <input type="number" id="edad" name="edad" required min="18" max="100" class="form-control mb-3">
+                <button type="submit" class="btn btn-success">Agregar</button>
+            </form>
+        </section>
+        <section class="bg-white p-4 rounded shadow">
+            <h2>Lista de Estudiantes</h2>
+            <form action="#" method="get" class="mb-3">
+                <label for="busqueda" class="form-label">Buscar por nombre:</label>
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre" onkeyup="filtrarTabla('estudiantes', this.value)">
+                <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
+            </form>
+            <table id="estudiantes-table" class="table table-striped">
+                <thead class="table-primary">
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Correo</th>
+                        <th>Edad</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+    </main>
+    <footer class="text-center mt-4 text-muted">
+        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/app.js"></script>
+    <script>
+        document.getElementById('form-estudiantes').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const formData = {
+                nombre: document.getElementById('nombre').value,
+                correo: document.getElementById('correo').value,
+                edad: parseInt(document.getElementById('edad').value)
+            };
+            insertarDato('estudiantes', formData);
+            this.reset();
+        });
+    </script>
+</body>
+</html>
