--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -1,52 +1,69 @@
-  <!DOCTYPE html>
-  <html lang="es">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Profesores</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" href="../css/estilos.css">
-  </head>
-  <body class="bg-light">
-      <header class="bg-primary text-white text-center py-3">
-          <h1>Módulo de Profesores</h1>
-      </header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
-          <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
-              <li class="nav-item"><a class="nav-link" href="estudiantes.html">Estudiantes</a></li>
-              <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
-          </ul>
-      </nav>
-      <main class="container mt-4">
-          <section class="bg-white p-4 rounded shadow">
-              <h2>Lista de Profesores</h2>
-              <form action="#" method="get" class="mb-3">
-                  <label for="busqueda" class="form-label">Buscar por especialidad:</label>
-                  <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad">
-                  <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
-              </form>
-              <table class="table table-striped">
-                  <thead class="table-primary">
-                      <tr>
-                          <th>ID</th>
-                          <th>Nombre</th>
-                          <th>Especialidad</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr><td>201</td><td>Dr. Pedro Gutierrez</td><td>Matemáticas II</td></tr>
-                      <tr><td>202</td><td>Prof. Carlos Gómez</td><td>Programación Web</td></tr>
-                      <tr><td>203</td><td>Dra. Elena Saénz</td><td>Calculo IV</td></tr>
-                  </tbody>
-              </table>
-          </section>
-      </main>
-      <footer class="text-center mt-4 text-muted">
-          <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-  </html>
-  
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profesores</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilos.css">
+</head>
+<body class="bg-light" onload="cargarTabla('profesores')">
+    <header class="bg-primary text-white text-center py-3">
+        <h1>Módulo de Profesores</h1>
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="login.html">Volver al Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
+            <li class="nav-item"><a class="nav-link" href="estudiantes.html">Estudiantes</a></li>
+            <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
+        </ul>
+    </nav>
+    <main class="container mt-4">
+        <section class="bg-white p-4 rounded shadow mb-4">
+            <h2>Agregar Profesor</h2>
+            <form id="form-profesores" class="d-flex flex-column">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required minlength="3" class="form-control mb-3">
+                <label for="especialidad" class="form-label">Especialidad:</label>
+                <input type="text" id="especialidad" name="especialidad" required class="form-control mb-3">
+                <button type="submit" class="btn btn-success">Agregar</button>
+            </form>
+        </section>
+        <section class="bg-white p-4 rounded shadow">
+            <h2>Lista de Profesores</h2>
+            <form action="#" method="get" class="mb-3">
+                <label for="busqueda" class="form-label">Buscar por especialidad:</label>
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTabla('profesores', this.value)">
+                <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
+            </form>
+            <table id="profesores-table" class="table table-striped">
+                <thead class="table-primary">
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Especialidad</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
+    </main>
+    <footer class="text-center mt-4 text-muted">
+        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/app.js"></script>
+    <script>
+        document.getElementById('form-profesores').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const formData = {
+                nombre: document.getElementById('nombre').value,
+                especialidad: document.getElementById('especialidad').value
+            };
+            insertarDato('profesores', formData);
+            this.reset();
+        });
+    </script>
+</body>
+</html>
