--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Redirección al Sistema</title>
-      <script>window.location.href = "Proyecto-avance/pages/login.html";</script>
+      <script>window.location.href = "/pages/login.html";</script>
   </head>
   <body>
       <p>Redirigiendo al login...</p>
