--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -46,6 +46,7 @@
                         <th>Nombre</th>
                         <th>Duración (horas)</th>
                         <th>Profesor</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
