--- a/pages/estudiantes.html
+++ b/pages/estudiantes.html
@@ -46,6 +46,7 @@
                         <th>Nombre</th>
                         <th>Correo</th>
                         <th>Edad</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
