--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -43,6 +43,7 @@
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Especialidad</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
