--- a/pages/registro.html
+++ b/pages/registro.html
@@ -48,16 +48,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/app.js"></script>
     <script>
-        document.getElementById('form-registro').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const formData = {
-                nombre: document.getElementById('nombre').value,
-                correo: document.getElementById('email').value,
-                edad: parseInt(document.getElementById('edad').value)
-            };
-            insertarDato('estudiantes', formData);
-            this.reset();
-            alert('Estudiante registrado exitosamente. Ve a la página de Estudiantes para ver la lista actualizada.');
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('Script de registro cargado');  // Confirma que el script se ejecuta
+            document.getElementById('form-registro').addEventListener('submit', function(e) {
+                e.preventDefault();
+                console.log('Formulario enviado');  // Confirma que el evento se dispara
+                const formData = {
+                    nombre: document.getElementById('nombre').value,
+                    correo: document.getElementById('email').value,
+                    edad: parseInt(document.getElementById('edad').value)
+                };
+                try {
+                    insertarDato('estudiantes', formData);
+                    console.log('Dato insertado exitosamente');  // Confirma inserción
+                } catch (error) {
+                    console.error('Error al insertar dato:', error);  // Muestra error si falla
+                    alert('Error al registrar. Revisa la consola para detalles.');
+                    return;  // Sale si hay error
+                }
+                this.reset();  // Limpia los campos inmediatamente
+                console.log('Campos limpiados');  // Confirma reset
+                alert('Estudiante registrado exitosamente. Los campos están limpios.');
+            });
         });
     </script>
 </body>
