--- a/pages/estudiantes.html
+++ b/pages/estudiantes.html
@@ -57,17 +57,28 @@
         <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/app.js"></script>
     <script>
-        document.getElementById('form-estudiantes').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const formData = {
-                nombre: document.getElementById('nombre').value,
-                correo: document.getElementById('correo').value,
-                edad: parseInt(document.getElementById('edad').value)
-            };
-            insertarDato('estudiantes', formData);
-            this.reset();
+         // Funciones wrapper para async
+        async function cargarTablaAsync(tipo) {
+            await cargarTabla(tipo);
+        }
+        async function filtrarTablaAsync(tipo, query) {
+            await filtrarTabla(tipo, query);
+        }
+        // Event listener para formulario
+        document.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('form-estudiantes').addEventListener('submit', async function(e) {
+                e.preventDefault();
+                const formData = {
+                    nombre: document.getElementById('nombre').value,
+                    correo: document.getElementById('correo').value,
+                    edad: parseInt(document.getElementById('edad').value)
+                };
+                await insertarDato('estudiantes', formData);
+                this.reset();
+            });
         });
     </script>
 </body>
