--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body class="bg-light" onload="cargarTabla('profesores')">
+<body class="bg-light" onload="cargarTablaAsync('profesores')">
     <header class="bg-primary text-white text-center py-3">
         <h1>Módulo de Profesores</h1>
     </header>
@@ -34,7 +34,7 @@
             <h2>Lista de Profesores</h2>
             <form action="#" method="get" class="mb-3">
                 <label for="busqueda" class="form-label">Buscar por especialidad:</label>
-                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTabla('profesores', this.value)">
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTablaAsync('profesores', this.value)">
                 <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
             </form>
             <table id="profesores-table" class="table table-striped">
@@ -54,16 +54,27 @@
         <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/app.js"></script>
     <script>
-        document.getElementById('form-profesores').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const formData = {
-                nombre: document.getElementById('nombre').value,
-                especialidad: document.getElementById('especialidad').value
-            };
-            insertarDato('profesores', formData);
-            this.reset();
+        // Funciones wrapper para async
+        async function cargarTablaAsync(tipo) {
+            await cargarTabla(tipo);
+        }
+        async function filtrarTablaAsync(tipo, query) {
+            await filtrarTabla(tipo, query);
+        }
+        // Event listener para formulario
+        document.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('form-profesores').addEventListener('submit', async function(e) {
+                e.preventDefault();
+                const formData = {
+                    nombre: document.getElementById('nombre').value,
+                    especialidad: document.getElementById('especialidad').value
+                };
+                await insertarDato('profesores', formData);
+                this.reset();
+            });
         });
     </script>
 </body>
