--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -34,7 +34,7 @@
         </section>
         <section class="bg-white p-4 rounded shadow">
             <h2>Lista de Cursos</h2>
-            <form action="#" method="get" class="mb-3">
+            <form id="form-busqueda" class="mb-3">  <!-- Agregado ID para event listener -->
                 <label for="busqueda" class="form-label">Buscar por nombre:</label>
                 <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre del curso" onkeyup="filtrarTablaAsync('cursos', this.value)">
                 <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
@@ -54,10 +54,10 @@
         </section>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>  <!-- Corregido a 2024 para consistencia -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
     <script src="../js/app.js"></script>
     <script>
         // Funciones wrapper para async (llaman a app.js)
@@ -67,7 +67,7 @@
         async function filtrarTablaAsync(tipo, query) {
             await filtrarTabla(tipo, query);
         }
-        // Event listener para formulario (async)
+        // Event listener para formulario de agregar (async)
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('form-cursos').addEventListener('submit', async function(e) {
                 e.preventDefault();
@@ -78,6 +78,12 @@
                 };
                 await insertarDato('cursos', formData);  // Espera la inserción
                 this.reset();  // Limpia campos después
+            });
+            // Event listener para formulario de búsqueda (previene recarga y filtra)
+            document.getElementById('form-busqueda').addEventListener('submit', async function(e) {
+                e.preventDefault();
+                const query = document.getElementById('busqueda').value;
+                await filtrarTablaAsync('cursos', query);
             });
         });
     </script>
