--- a/pages/estudiantes.html
+++ b/pages/estudiantes.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body class="bg-light" onload="cargarTabla('estudiantes')">
+<body class="bg-light" onload="cargarTablaAsync('estudiantes')">  <!-- Cambiado a wrapper async -->
     <header class="bg-primary text-white text-center py-3">
         <h1>Módulo de Estudiantes</h1>
     </header>
@@ -34,9 +34,9 @@
         </section>
         <section class="bg-white p-4 rounded shadow">
             <h2>Lista de Estudiantes</h2>
-            <form action="#" method="get" class="mb-3">
+            <form id="form-busqueda" class="mb-3">  <!-- Agregado ID para event listener -->
                 <label for="busqueda" class="form-label">Buscar por nombre:</label>
-                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre" onkeyup="filtrarTabla('estudiantes', this.value)">
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre" onkeyup="filtrarTablaAsync('estudiantes', this.value)">  <!-- Cambiado a wrapper async -->
                 <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
             </form>
             <table id="estudiantes-table" class="table table-striped">
@@ -54,20 +54,20 @@
         </section>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>  <!-- Corregido a 2024 si es actual -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
     <script src="../js/app.js"></script>
     <script>
-         // Funciones wrapper para async
+        // Funciones wrapper para async (ya definidas, pero aseguramos consistencia)
         async function cargarTablaAsync(tipo) {
             await cargarTabla(tipo);
         }
         async function filtrarTablaAsync(tipo, query) {
             await filtrarTabla(tipo, query);
         }
-        // Event listener para formulario
+        // Event listener para formulario de agregar
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('form-estudiantes').addEventListener('submit', async function(e) {
                 e.preventDefault();
@@ -78,6 +78,12 @@
                 };
                 await insertarDato('estudiantes', formData);
                 this.reset();
+            });
+            // Event listener para formulario de búsqueda (previene recarga y filtra)
+            document.getElementById('form-busqueda').addEventListener('submit', async function(e) {
+                e.preventDefault();
+                const query = document.getElementById('busqueda').value;
+                await filtrarTablaAsync('estudiantes', query);
             });
         });
     </script>
