--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -32,9 +32,9 @@
         </section>
         <section class="bg-white p-4 rounded shadow">
             <h2>Lista de Profesores</h2>
-            <form action="#" method="get" class="mb-3">
+            <form id="form-busqueda" class="mb-3">  <!-- Agregado ID para event listener -->
                 <label for="busqueda" class="form-label">Buscar por especialidad:</label>
-                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTablaAsync('profesores', this.value)">
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese especialidad" onkeyup="filtrarTablaAsync('profesores', this.value, 'especialidad')">  <!-- Especificado campo 'especialidad' -->
                 <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
             </form>
             <table id="profesores-table" class="table table-striped">
@@ -51,18 +51,18 @@
         </section>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>  <!-- Corregido a 2024 para consistencia -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
     <script src="../js/app.js"></script>
     <script>
         // Funciones wrapper para async
         async function cargarTablaAsync(tipo) {
             await cargarTabla(tipo);
         }
-        async function filtrarTablaAsync(tipo, query) {
-            await filtrarTabla(tipo, query);
+        async function filtrarTablaAsync(tipo, query, campoFiltro = 'nombre') {  // Parámetro opcional para campo
+            await filtrarTabla(tipo, query, campoFiltro);
         }
         // Event listener para formulario
         document.addEventListener('DOMContentLoaded', function() {
@@ -74,6 +74,12 @@
                 };
                 await insertarDato('profesores', formData);
                 this.reset();
+            });
+            // Event listener para formulario de búsqueda (previene recarga y filtra por especialidad)
+            document.getElementById('form-busqueda').addEventListener('submit', async function(e) {
+                e.preventDefault();
+                const query = document.getElementById('busqueda').value;
+                await filtrarTablaAsync('profesores', query, 'especialidad');  // Especificado campo 'especialidad'
             });
         });
     </script>
