--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body class="bg-light" onload="cargarTablaAsync('profesores')">
+<body class="bg-light" onload="cargarTabla('profesores')">
     <header class="bg-primary text-white text-center py-3">
         <h1>Módulo de Profesores</h1>
     </header>
@@ -55,13 +55,13 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         // Funciones wrapper para async
-        async function cargarTablaAsync(tipo) {
+        async function cargarTabla(tipo) {
             await cargarTabla(tipo);
         }
-        async function filtrarTablaAsync(tipo, query, campoFiltro = 'nombre') {  // Parámetro opcional para campo
+        async function filtrarTabla(tipo, query, campoFiltro = 'nombre') {  // Parámetro opcional para campo
             await filtrarTabla(tipo, query, campoFiltro);
         }
         // Event listener para formulario
@@ -79,7 +79,7 @@
             document.getElementById('form-busqueda').addEventListener('submit', async function(e) {
                 e.preventDefault();
                 const query = document.getElementById('busqueda').value;
-                await filtrarTablaAsync('profesores', query, 'especialidad');  // Especificado campo 'especialidad'
+                await filtrarTabla('profesores', query, 'especialidad');  // Especificado campo 'especialidad'
             });
         });
     </script>
