--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -55,7 +55,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         // Funciones wrapper para async
         async function cargarTabla(tipo) {
