--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -54,6 +54,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Carga app.js como módulo -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script type="module" src="app.js"></script>
     <script>
         // Inicialización única al cargar el DOM
