--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -30,6 +30,7 @@
     </table>
 
     <script>
+        import { createClient } from '@supabase/supabase-js'
         // Inicialización de Supabase (al inicio del script)
         const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
         const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real de Supabase
