--- a/pages/profesores.html
+++ b/pages/profesores.html
@@ -1,116 +1,202 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profesores</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Script de Supabase (debe estar aquí para cargar antes) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
-<body>
-    <!-- Tu contenido HTML aquí (formulario, tabla, etc.) -->
-    <h1>Profesores</h1>
-    <form id="profesores-form">
-        <input type="text" id="nombre" placeholder="Nombre" required>
-        <input type="text" id="especialidad" placeholder="Especialidad" required>
-        <button type="submit">Agregar</button>
-    </form>
-    <table id="profesores-table" class="table">
-        <thead>
+  </head>
+  <body>
+    <header class="bg-primary text-white text-center py-3">
+      <h1>Módulo de Profesores</h1>
+    </header>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light justify-content-center"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Volver al Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="cursos.html">Cursos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="estudiantes.html">Estudiantes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="registro.html">Registro</a>
+        </li>
+      </ul>
+    </nav>
+    <main class="container mt-4">
+      <section class="bg-white p-4 rounded shadow mb-4">
+        <h2>Agregar Profesor</h2>
+        <form id="form-profesores" class="d-flex flex-column">
+          <label for="nombre" class="form-label">Nombre:</label>
+          <input
+            type="text"
+            id="nombre"
+            name="nombre"
+            required
+            minlength="3"
+            class="form-control mb-3"
+          />
+          <label for="especialidad" class="form-label">Especialidad:</label>
+          <input
+            type="text"
+            id="especialidad"
+            name="especialidad"
+            required
+            class="form-control mb-3"
+          />
+          <button type="submit" class="btn btn-success">Agregar</button>
+        </form>
+      </section>
+      <section class="bg-white p-4 rounded shadow">
+        <h2>Lista de Profesores</h2>
+        <form action="#" method="get" class="mb-3">
+          <label for="busqueda" class="form-label"
+            >Buscar por especialidad:</label
+          >
+          <input
+            type="text"
+            id="busqueda"
+            name="busqueda"
+            class="form-control"
+            placeholder="Ingrese especialidad"
+            onkeyup="filtrarTabla('profesores', this.value)"
+          />
+          <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
+        </form>
+        <table id="profesores-table" class="table table-striped">
+          <thead class="table-primary">
             <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Especialidad</th>
-                <th>Acciones</th>
+              <th>ID</th>
+              <th>Nombre</th>
+              <th>Especialidad</th>
+              <th>Acciones</th>
             </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </section>
+    </main>
+    <footer class="text-center mt-4 text-muted">
+      <p>&copy; 2025 Sistema Educativo. Todos los derechos reservados.</p>
+    </footer>
 
     <script>
-        import { createClient } from '@supabase/supabase-js'
-        // Inicialización de Supabase (al inicio del script)
-        const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
-        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real de Supabase
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+      // Inicialización de Supabase (al inicio del script)
+      const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
+      const supabaseKey =
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM"; // Reemplaza con tu clave real de Supabase
+      const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-        // Función para cargar la tabla
-        async function cargarTabla(tipo) {
-            try {
-                const { data, error } = await supabase.from(tipo).select('*');
-                if (error) throw error;
-                const tbody = document.querySelector(`#${tipo}-table tbody`);
-                tbody.innerHTML = '';
-                data.forEach(item => {
-                    const row = document.createElement('tr');
-                    Object.values(item).forEach(val => {
-                        const td = document.createElement('td');
-                        td.textContent = val;
-                        row.appendChild(td);
-                    });
-                    // Botón de eliminar
-                    const tdEliminar = document.createElement('td');
-                    const btnEliminar = document.createElement('button');
-                    btnEliminar.textContent = 'Eliminar';
-                    btnEliminar.className = 'btn btn-danger btn-sm';
-                    btnEliminar.onclick = () => eliminarDato(tipo, item.id);
-                    tdEliminar.appendChild(btnEliminar);
-                    row.appendChild(tdEliminar);
-                    tbody.appendChild(row);
-                });
-            } catch (err) {
-                console.error('Error cargando tabla:', err);
-                alert('Error al cargar datos. Verifica tu conexión a Supabase.');
-            }
+      // Función para cargar la tabla
+      async function cargarTabla(tipo) {
+        try {
+          const { data, error } = await supabase.from(tipo).select("*");
+          if (error) throw error;
+          const tbody = document.querySelector(`#${tipo}-table tbody`);
+          tbody.innerHTML = "";
+          data.forEach((item) => {
+            const row = document.createElement("tr");
+            Object.values(item).forEach((val) => {
+              const td = document.createElement("td");
+              td.textContent = val;
+              row.appendChild(td);
+            });
+            // Botón de eliminar
+            const tdEliminar = document.createElement("td");
+            const btnEliminar = document.createElement("button");
+            btnEliminar.textContent = "Eliminar";
+            btnEliminar.className = "btn btn-danger btn-sm";
+            btnEliminar.onclick = () => eliminarDato(tipo, item.id);
+            tdEliminar.appendChild(btnEliminar);
+            row.appendChild(tdEliminar);
+            tbody.appendChild(row);
+          });
+        } catch (err) {
+          console.error("Error cargando tabla:", err);
+          alert("Error al cargar datos. Verifica tu conexión a Supabase.");
         }
+      }
 
-        // Función para insertar datos
-        async function insertarDato(tipo, formData) {
-            try {
-                const { data, error } = await supabase.from(tipo).insert([formData]).select();
-                if (error) throw error;
-                if (document.querySelector(`#${tipo}-table tbody`)) {
-                    await cargarTabla(tipo);
-                }
-                alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} agregado exitosamente.`);
-            } catch (err) {
-                console.error('Error insertando dato:', err);
-                alert('Error al agregar dato.');
-            }
+      // Función para insertar datos
+      async function insertarDato(tipo, formData) {
+        try {
+          const { data, error } = await supabase
+            .from(tipo)
+            .insert([formData])
+            .select();
+          if (error) throw error;
+          if (document.querySelector(`#${tipo}-table tbody`)) {
+            await cargarTabla(tipo);
+          }
+          alert(
+            `${
+              tipo.charAt(0).toUpperCase() + tipo.slice(1)
+            } agregado exitosamente.`
+          );
+        } catch (err) {
+          console.error("Error insertando dato:", err);
+          alert("Error al agregar dato.");
         }
+      }
 
-        // Función para eliminar datos
-        async function eliminarDato(tipo, id) {
-            if (confirm('¿Estás seguro de que quieres eliminar este registro?')) {
-                try {
-                    const { error } = await supabase.from(tipo).delete().eq('id', id);
-                    if (error) throw error;
-                    await cargarTabla(tipo);
-                    alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} eliminado exitosamente.`);
-                } catch (err) {
-                    console.error('Error eliminando dato:', err);
-                    alert('Error al eliminar dato.');
-                }
-            }
+      // Función para eliminar datos
+      async function eliminarDato(tipo, id) {
+        if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
+          try {
+            const { error } = await supabase.from(tipo).delete().eq("id", id);
+            if (error) throw error;
+            await cargarTabla(tipo);
+            alert(
+              `${
+                tipo.charAt(0).toUpperCase() + tipo.slice(1)
+              } eliminado exitosamente.`
+            );
+          } catch (err) {
+            console.error("Error eliminando dato:", err);
+            alert("Error al eliminar dato.");
+          }
         }
+      }
 
-        // Event listener para cargar la tabla al cargar la página
-        window.addEventListener('load', async function() {
-            await cargarTabla('profesores');
+      function filtrarTabla(tipo, valor) {
+        const tbody = document.querySelector(`#${tipo}-table tbody`);
+        const rows = tbody.querySelectorAll("tr");
+        rows.forEach((row) => {
+          const especialidad = row.cells[2].textContent.toLowerCase(); // Asumiendo que "Especialidad" es la tercera columna (índice 2)
+          if (especialidad.includes(valor.toLowerCase())) {
+            row.style.display = "";
+          } else {
+            row.style.display = "none";
+          }
         });
+      }
+      // Event listener para cargar la tabla al cargar la página
+      window.addEventListener("load", async function () {
+        await cargarTabla("profesores");
+      });
 
-        // Event listener asíncrono para el formulario
-        document.getElementById('profesores-form').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            const formData = {
-                nombre: document.getElementById('nombre').value,
-                especialidad: document.getElementById('especialidad').value
-            };
-            await insertarDato('profesores', formData);
-            this.reset(); // Limpiar formulario
+      // Event listener asíncrono para el formulario
+      document
+        .getElementById("profesores-form")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault();
+          const formData = {
+            nombre: document.getElementById("nombre").value,
+            especialidad: document.getElementById("especialidad").value,
+          };
+          await insertarDato("profesores", formData);
+          this.reset(); // Limpiar formulario
         });
     </script>
-</body>
+  </body>
 </html>
