--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body class="bg-light" onload="cargarTablaAsync('cursos')">
+<body class="bg-light">
     <header class="bg-primary text-white text-center py-3">
         <h1>Módulo de Cursos</h1>
     </header>
@@ -34,9 +34,9 @@
         </section>
         <section class="bg-white p-4 rounded shadow">
             <h2>Lista de Cursos</h2>
-            <form id="form-busqueda" class="mb-3">  <!-- Agregado ID para event listener -->
+            <form action="#" method="get" class="mb-3">
                 <label for="busqueda" class="form-label">Buscar por nombre:</label>
-                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre del curso" onkeyup="filtrarTablaAsync('cursos', this.value)">
+                <input type="text" id="busqueda" name="busqueda" class="form-control" placeholder="Ingrese nombre del curso" onkeyup="filtrarTabla('cursos', this.value)">
                 <button type="submit" class="btn btn-secondary mt-2">Buscar</button>
             </form>
             <table id="cursos-table" class="table table-striped">
@@ -54,38 +54,112 @@
         </section>
     </main>
     <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>  <!-- Corregido a 2024 para consistencia -->
+        <p>&copy; 2024 Sistema Educativo. Todos los derechos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Removido el script de Supabase JS, ya que app.js lo importa -->
-    <script src="../js/app.js"></script>
-    <script>
-        // Funciones wrapper para async (llaman a app.js)
-        async function cargarTablaAsync(tipo) {
-            await cargarTabla(tipo);
+    <script type="module">
+        // Importar Supabase desde esm.sh (compatible con módulos ES)
+        import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+
+        // Inicialización de Supabase
+        const supabaseUrl = "https://jxucinwtreugfehjfgkx.supabase.co";
+        const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp4dWNpbnd0cmV1Z2ZlaGpmZ2t4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQyMDgwMjEsImV4cCI6MjA3OTc4NDAyMX0.ssWcoQwUzxIGYArzb3porS8JxFecaebZV_SMhnh98nM";
+        const supabase = createClient(supabaseUrl, supabaseKey);
+
+        // Función para cargar la tabla
+        async function cargarTabla(tipo) {
+            try {
+                const { data, error } = await supabase.from(tipo).select("*");
+                if (error) throw error;
+                const tbody = document.querySelector(`#${tipo}-table tbody`);
+                tbody.innerHTML = "";
+                data.forEach((item) => {
+                    const row = document.createElement("tr");
+                    Object.values(item).forEach((val) => {
+                        const td = document.createElement("td");
+                        td.textContent = val;
+                        row.appendChild(td);
+                    });
+                    // Botón de eliminar
+                    const tdEliminar = document.createElement("td");
+                    const btnEliminar = document.createElement("button");
+                    btnEliminar.textContent = "Eliminar";
+                    btnEliminar.className = "btn btn-danger btn-sm";
+                    btnEliminar.onclick = () => eliminarDato(tipo, item.id);
+                    tdEliminar.appendChild(btnEliminar);
+                    row.appendChild(tdEliminar);
+                    tbody.appendChild(row);
+                });
+            } catch (err) {
+                console.error("Error cargando tabla:", err);
+                alert("Error al cargar datos. Verifica tu conexión a Supabase.");
+            }
         }
-        async function filtrarTablaAsync(tipo, query) {
-            await filtrarTabla(tipo, query);
+
+        // Función para insertar datos
+        async function insertarDato(tipo, formData) {
+            try {
+                const { data, error } = await supabase
+                    .from(tipo)
+                    .insert([formData])
+                    .select();
+                if (error) throw error;
+                if (document.querySelector(`#${tipo}-table tbody`)) {
+                    await cargarTabla(tipo);
+                }
+                alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} agregado exitosamente.`);
+            } catch (err) {
+                console.error("Error insertando dato:", err);
+                alert("Error al agregar dato.");
+            }
         }
-        // Event listener para formulario de agregar (async)
-        document.addEventListener('DOMContentLoaded', function() {
-            document.getElementById('form-cursos').addEventListener('submit', async function(e) {
-                e.preventDefault();
-                const formData = {
-                    nombre: document.getElementById('nombre').value,
-                    duracion: parseInt(document.getElementById('duracion').value),
-                    profesor: document.getElementById('profesor').value
-                };
-                await insertarDato('cursos', formData);  // Espera la inserción
-                this.reset();  // Limpia campos después
+
+        // Función para eliminar datos
+        async function eliminarDato(tipo, id) {
+            if (confirm("¿Estás seguro de que quieres eliminar este registro?")) {
+                try {
+                    const { error } = await supabase.from(tipo).delete().eq("id", id);
+                    if (error) throw error;
+                    await cargarTabla(tipo);
+                    alert(`${tipo.charAt(0).toUpperCase() + tipo.slice(1)} eliminado exitosamente.`);
+                } catch (err) {
+                    console.error("Error eliminando dato:", err);
+                    alert("Error al eliminar dato.");
+                }
+            }
+        }
+
+        // Función para filtrar la tabla (ajustada para buscar por nombre, columna 1)
+        function filtrarTabla(tipo, valor) {
+            const tbody = document.querySelector(`#${tipo}-table tbody`);
+            const rows = tbody.querySelectorAll("tr");
+            rows.forEach((row) => {
+                const nombre = row.cells[1].textContent.toLowerCase(); // Columna 1: Nombre
+                if (nombre.includes(valor.toLowerCase())) {
+                    row.style.display = "";
+                } else {
+                    row.style.display = "none";
+                }
             });
-            // Event listener para formulario de búsqueda (previene recarga y filtra)
-            document.getElementById('form-busqueda').addEventListener('submit', async function(e) {
-                e.preventDefault();
-                const query = document.getElementById('busqueda').value;
-                await filtrarTablaAsync('cursos', query);
-            });
+        }
+
+        // Event listener para cargar la tabla al cargar la página
+        window.addEventListener("load", async function () {
+            await cargarTabla("cursos");
         });
+
+        // Event listener asíncrono para el formulario
+        document
+            .getElementById("form-cursos")
+            .addEventListener("submit", async function (event) {
+                event.preventDefault();
+                const formData = {
+                    nombre: document.getElementById("nombre").value,
+                    duracion: parseInt(document.getElementById("duracion").value),
+                    profesor: document.getElementById("profesor").value,
+                };
+                await insertarDato("cursos", formData);
+                this.reset(); // Limpiar formulario
+            });
     </script>
 </body>
 </html>
